To be honest these programming folks really use some big jargon names like Dynamic programming which feels overwhelming at first sight but this is as easy as fuck literally we're doing nothing but keeping track of previous values whether in an array or some variables why give them such names as DP bluh bluh bluh, this was very easy.

--- a/LeetCode-150.ipynb
+++ b/LeetCode-150.ipynb
@@ -165,10 +165,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# As simple as fuck\n",
     "def climbStairs(n):\n",
     "    \"\"\"\n",
     "    :type n: int\n",
@@ -176,7 +177,10 @@
     "    \"\"\"\n",
     "    if n == 1 or n==2 or n==3:\n",
     "        return n    \n",
-    "    #Create an array of size n+1 containing 0s \n",
+    "    # Create an array of size n+1 containing 0s\n",
+    "    # Because of this line the time complexity becomes linear - O(n)\n",
+    "    # The bigger the number the bigger the dp array becomes\n",
+    "    # So memory is consumed linearly with respect to the input size\n",
     "    dp = [0] * (n + 1)\n",
     "    dp[1] = 1  # One way to reach step 1\n",
     "    dp[2] = 2  # Two ways to reach step 2\n",
@@ -200,11 +204,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def climbStairs(self, n):\n",
+    "# Also as simple as fuck\n",
+    "def climbStairs(n):\n",
     "    \"\"\"\n",
     "    :type n: int\n",
     "    :rtype: int\n",
@@ -215,12 +220,16 @@
     "    # Initialize variables to store the last two results\n",
     "    prev1, prev2 = 2, 1\n",
     "\n",
+    "    # So in this approach we don't create any sort of array\n",
+    "    # but rather we just keep track of the last two digits\n",
+    "    # add them and replace the second digit's value with\n",
+    "    # the latest computed value \n",
     "    # Compute the ways to reach each step iteratively\n",
     "    for i in range(3, n + 1):\n",
     "        current = prev1 + prev2  # The number of ways to reach the current step\n",
     "        prev2 = prev1  # Update the second previous step\n",
     "        prev1 = current  # Update the previous step\n",
-    "\n",
+    "        \n",
     "    return prev1  # prev1 contains the result for n"
    ]
   }
